--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon",
     "test": "jest"
   },
+  "engines": {
+    "node": "12.18.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
