--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "devstart": "nodemon",
+    "start": "node index.js",
     "test": "jest"
   },
   "engines": {
