--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
